--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
-<html lang="de">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>TS Games</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" integrity="sha384-H5O3U+oUYwd/bFECZMaQ1XJlueV5e1gB4b7Xt0M06fPbgz48WH33qxUyQNPeZVou" crossorigin="anonymous">
