Conway's Game of Life

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <div class="card">
         <div class="list">
             <a class="list-item" href="bs/index.html">Battleship</a>
+            <a class="list-item" href="gol/index.html">Conway's Game of Life</a>
             <a class="list-item" href="mw/index.html">Minesweeper</a>
         </div>
     </div>
