--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
             <a class="list-item" href="bs/index.html">Battleship</a>
             <a class="list-item" href="gol/index.html">Conway's Game of Life</a>
             <a class="list-item" href="mw/index.html">Minesweeper</a>
+            <a class="list-item" href="snake/index.html">Snake</a>
         </div>
     </div>
 </div>
