--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,19 @@
     </div>
 </header>
 <div class="container" id="field">
+    <h1 class="title">REAL GAMES</h1>
     <div class="card">
         <div class="list">
             <a class="list-item" href="bs/index.html">Battleship</a>
-            <a class="list-item" href="gol/index.html">Conway's Game of Life</a>
             <a class="list-item" href="mw/index.html">Minesweeper</a>
             <a class="list-item" href="snake/index.html">Snake</a>
+        </div>
+    </div>
+    <h1 class="title">OTHER STUFF</h1>
+    <div class="card">
+        <div class="list">
+            <a class="list-item" href="canvas/index.html">Canvas Dickery</a>
+            <a class="list-item" href="gol/index.html">Conway's Game of Life</a>
         </div>
     </div>
 </div>
