--- a/public/canvas/index.html
+++ b/public/canvas/index.html
@@ -44,7 +44,10 @@
         </select>
     </div>
 </div>
-
+<div class="container mt-4">
+    <label class="label" for="gravity">TRAIL LENGTH:</label><input type="range" id="trail" value="100" min="0" max="200" step="1" class="input" style="width: 20rem;">
+    <input id="showTrail" type="number" value="100" class="input" disabled>
+</div>
 <div id="overlay">
     <div class="card"></div>
 </div>
