--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
             <a class="list-item" href="bs/index.html">Battleship</a>
             <a class="list-item" href="mw/index.html">Minesweeper</a>
             <a class="list-item" href="snake/index.html">Snake</a>
+            <a class="list-item" href="ttt/index.html">Tic Tac Toe</a>
         </div>
     </div>
     <h1 class="title">OTHER STUFF</h1>
