peg solitaire: init

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         <div class="list">
             <a class="list-item" href="bs/index.html">Battleship</a>
             <a class="list-item" href="mw/index.html">Minesweeper</a>
+            <a class="list-item" href="peso/index.html">Peg Solitaire</a>
             <a class="list-item" href="snake/index.html">Snake</a>
             <a class="list-item" href="ttt/index.html">Tic Tac Toe</a>
         </div>
