--- a/public/canvas/index.html
+++ b/public/canvas/index.html
@@ -30,6 +30,7 @@
 </div>
 <div class="container">
     <button type="button" class="button fas fa-pause" id="pause"></button>
+    <a class="button" href="https://github.com/0lsen/tsgames" target="_blank" id="github"></a>
 </div>
 <div class="container mt-4">
     <label class="label" for="gravity">GRAVITY:</label><input type="range" id="gravity" value="9.81" min="0.01" max="100" step="0.01" class="input" style="width: 20rem;">
