--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         <div class="list">
             <a class="list-item" href="canvas/index.html">Canvas Dickery</a>
             <a class="list-item" href="gol/index.html">Conway's Game of Life</a>
+            <a class="list-item" href="sabo/index.html">Sandbox</a>
         </div>
     </div>
 </div>
