--- a/public/cadi/index.html
+++ b/public/cadi/index.html
@@ -86,7 +86,7 @@
     let app;
     $(function () {
         require(
-            ['canvas/App'],
+            ['cadi/App'],
             (main) => {
                 app = new main.App();
             }
