--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,9 @@
     <h1 class="title">OTHER STUFF</h1>
     <div class="card">
         <div class="list">
-            <a class="list-item" href="canvas/index.html">Canvas Dickery</a>
+            <a class="list-item" href="cadi/index.html">Canvas Dickery</a>
             <a class="list-item" href="gol/index.html">Conway's Game of Life</a>
+            <a class="list-item" href="liro/index.html">Lightroom</a>
             <a class="list-item" href="sabo/index.html">Sandbox</a>
         </div>
     </div>
