lightroom: parameterize shadow alpha

--- a/public/liro/index.html
+++ b/public/liro/index.html
@@ -52,6 +52,10 @@
                 <label class="label" for="lsRea">REACH</label>
                 <input type="range" value="70" min="10" max="100" step="1" class="input" id="lsRea">
             </div>
+            <div class="column is-4">
+                <label class="label" for="lsShadAlpha">SHADOW ALPHA</label>
+                <input type="range" value="30" min="10" max="100" step="1" class="input" id="lsShadAlpha">
+            </div>
         </div>
         <h2 class="subtitle">PILLARS</h2>
         <div class="columns">
