lightroom: pillar preview

--- a/public/liro/index.html
+++ b/public/liro/index.html
@@ -80,6 +80,7 @@
                 <input type="range" value="30" min="15" max="50" step="1" class="slider is-fullwidth is-danger" id="piRad">
             </div>
             <div class="column is-4">
+                <canvas id="preview"></canvas>
             </div>
             <div class="column is-4 has-text-right">
                 <label class="label">&nbsp;</label>
