tic tac toe 3d without opponent

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
             <a class="list-item" href="peso/index.html">Peg Solitaire</a>
             <a class="list-item" href="snake/index.html">Snake</a>
             <a class="list-item" href="ttt/index.html">Tic Tac Toe</a>
+            <a class="list-item" href="ttt3d/index.html">Tic Tac Toe 3D</a>
         </div>
     </div>
     <h1 class="title">OTHER STUFF</h1>
