--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
             <a class="list-item" href="snake/index.html">Snake</a>
             <a class="list-item" href="ttt/index.html">Tic Tac Toe</a>
             <a class="list-item" href="ttt3d/index.html">Tic Tac Toe 3D</a>
+            <a class="list-item" href="xmas/index.html">X-Mas Special</a>
         </div>
     </div>
     <h1 class="title">OTHER STUFF</h1>
