--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <div class="card">
         <div class="list">
             <a class="list-item" href="cadi/index.html">Canvas Dickery</a>
+            <a class="list-item" href="ciso/index.html">Circle Sort</a>
             <a class="list-item" href="cotra/index.html">Complex Number 2D Transformation</a>
             <a class="list-item" href="gol/index.html">Conway's Game of Life</a>
             <a class="list-item" href="liro/index.html">Lightroom</a>
