--- a/public/ciso/index.html
+++ b/public/ciso/index.html
@@ -32,7 +32,8 @@
     <button type="button" class="button" id="reset">Reset</button>
     <button type="button" class="button" onclick="app.sort(0)">Insertion Sort</button>
     <button type="button" class="button" onclick="app.sort(1)">Selection Sort</button>
-    <button type="button" class="button" onclick="app.sort(2)">Schedule Sort</button>
+    <button type="button" class="button" onclick="app.sort(2)">Merge Sort</button>
+    <button type="button" class="button" onclick="app.sort(3)">Schedule Sort</button>
     <a class="button" href="https://github.com/0lsen/tsgames" target="_blank" id="github"></a>
 </div>
 
