--- a/public/ciso/index.html
+++ b/public/ciso/index.html
@@ -33,7 +33,8 @@
     <button type="button" class="button" onclick="app.sort(0)">Insertion Sort</button>
     <button type="button" class="button" onclick="app.sort(1)">Selection Sort</button>
     <button type="button" class="button" onclick="app.sort(2)">Merge Sort</button>
-    <button type="button" class="button" onclick="app.sort(3)">Schedule Sort</button>
+    <button type="button" class="button" onclick="app.sort(3)">Heap Sort</button>
+    <button type="button" class="button" onclick="app.sort(4)">Schedule Sort</button>
     <a class="button" href="https://github.com/0lsen/tsgames" target="_blank" id="github"></a>
 </div>
 
