--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>TS Games</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" integrity="sha384-H5O3U+oUYwd/bFECZMaQ1XJlueV5e1gB4b7Xt0M06fPbgz48WH33qxUyQNPeZVou" crossorigin="anonymous">
+    <link rel="stylesheet" href="bulma.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
         #field .card {width: 100%;}
