ciso: bubble sort

--- a/public/ciso/index.html
+++ b/public/ciso/index.html
@@ -35,7 +35,8 @@
     <button type="button" class="button" onclick="app.sort(2)">Merge Sort</button>
     <button type="button" class="button" onclick="app.sort(3)">Heap Sort</button>
     <button type="button" class="button" onclick="app.sort(4)">Quick Sort</button>
-    <button type="button" class="button" onclick="app.sort(5)">Schedule Sort</button>
+    <button type="button" class="button" onclick="app.sort(5)">Bubble Sort</button>
+    <button type="button" class="button" onclick="app.sort(6)">Schedule Sort</button>
     <a class="button" href="https://github.com/0lsen/tsgames" target="_blank" id="github"></a>
 </div>
 
